src/test/deca/syntax/invalid/while_variable.synt
while_variable.deca:11: